@@ -1,7 +1,8 @@
 /*
- * Copyright (C) 2006-2020 Sergey Kashyrin <ska@kiska.net>
+ * Copyright (C) 2006-2021 Sergey Kashyrin <ska@kiska.net>
  *               2012 enhanced by Doug Vogel <dv11674@gmail.com>
  *               2013 fixes and enhancements by Atilla Akarsular <030ati@gmail.com>
+ *               2021 adjustments by James K. Lowden <jklowden@symas.com>
  *
  * This runtime library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -82,7 +83,6 @@ static inline char * strupr(char * p) {
 #endif
 
 #include <algorithm>
-#include <set>
 
 /////////////////////////////////////////////////////////////////////////
 // This is how runtime will behave in the case of switching the databases
@@ -467,20 +467,7 @@ private:
 	stmtholder ** data;
 	int			SZ;			// size of cache tables
 	int			count;
-	std::set<STMT*>		statements;
-	typedef std::set<STMT*>::iterator stmt_iterator;
 
-	class iptr_cmp {
-		const STMT *stmt;
-	public:
-		iptr_cmp( const STMT *stmt ) : stmt(stmt) {}
-		bool operator()( const STMT *stmt ) {
-		  if( stmt != this->stmt ) {
-			return stmt->SQL_IPTR == this->stmt->SQL_IPTR;
-		  }
-		  return false; // Not interesting if stmt matches itself
-		}
-	};
 public:
 	stmtcache(int sz = 1009) {
 		SZ = sz;
@@ -495,24 +482,10 @@ public:
 
 	int getCount() { return count;}
 
-	void clear() {
+	void clear()
+	{
 		for(int i = 0; i < SZ; ++i) {
 			for(stmtholder * h = data[i]; h != NULL;) {
-				logd(9, "stmtcache::clear: delete %p SQL_IPTR %p",
-				     h->stmt, h->stmt->SQL_IPTR);
-				stmt_iterator p =
-					std::find_if( statements.begin(),
-						      statements.end(),
-						      iptr_cmp(h->stmt) );
-				if( p != statements.end() ) {
-					logd(9,
-					     "stmtcache::clear: "
-					     "mysql->SQL_IPTR %p->%p "
-					     "already freed for mysql %p",
-					     h->stmt,
-					     h->stmt->SQL_IPTR,
-					     *p);
-				}
 				stmtholder * h2 = h;
 				h = h->next;
 				delete h2;
@@ -522,11 +495,8 @@ public:
 		count = 0;
 	}
 
-	void put(STMT * stmt) {
-		std::pair<stmt_iterator,bool> ret = statements.insert(stmt);
-		if( ret.second ) {
-			logd(9, "stmtcache::put: new %p", stmt);
-		}
+	void put(STMT * stmt)
+	{
 		int i = (int)(((unsigned long long)stmt) % SZ);
 		if(data[i] == NULL) {
 			stmtholder * v = new stmtholder(stmt);
@@ -2446,4 +2416,4 @@ static bool movecomp3(char * comp3, int bytelen, int precision, char * unpacked)
 	return true;
 }
 
-static const char * copyr = "Copyright (C) 2006-2020 Sergey Kashyrin <ska@kiska.net>";
+static const char * copyr = "Copyright (C) 2006-2021 Sergey Kashyrin <ska@kiska.net>";
